--- a/task/250407~250409/index.html
+++ b/task/250407~250409/index.html
@@ -9,6 +9,10 @@
     <body>
         <div class="membership_benefit">
             <h1></h1>
+            <div class="content_group">
+                <img>
+                <div class="benefit_info"></div>
+            </div>
         </div>
     </body>
 </html>
