링크태그만들기

--- a/task/250407~250409/index.html
+++ b/task/250407~250409/index.html
@@ -8,10 +8,14 @@
     </head>
     <body>
         <div class="membership_benefit">
-            <h1></h1>
+            <h1>메가박스 멤버십 혜택</h1>
             <div class="content_group">
                 <img>
-                <div class="benefit_info"></div>
+                <div class="benefit_info">
+                    <h2>포인트 적립</h2>
+                    <p>티켓, 매점 이용시 등급에 따라 <br>5~10% 포인트 적립!</p>
+                    <h3>자세히보기</h3>
+                </div>
             </div>
         </div>
     </body>
