--- a/task/250407~250409/index.html
+++ b/task/250407~250409/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="keywords" content="">
-        <title>메가박스 멤버쉽 | 메가박스</title>
+        <title>멤버쉽 안내 | 메가박스 멤버쉽 | 혜택 | 메가박스</title>
     </head>
     <body>
         <div class="membership_benefit">
