--- a/task/250414~250415/selector.html
+++ b/task/250414~250415/selector.html
@@ -6,8 +6,31 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <title>250414~250415선택자작성</title>
+    <link href="./styles/selector.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="weather">
+        <h1>날씨</h1>
+        <p class="area">부평구 부평동</p>
+        <p class="temperature">15.4도</p>
+        <P>어제보다 8.9도 낮음</P>
+        <h2 class="sub_title">습도</h2>
+        <p class="humidity">94%</p>
+        <h2 class="sub_title">미세먼지</h2>
+        <p class="dust">보통</p>
+        <div class="result">
+            이동성 고기압의 영향을 주로 받겠으나 일시적으로 상층 찬 공기의 영향을 받을 때가 있습니다.
+        </div>
+    </div>
+    <div id="news">
+        <a href="#">메리츠화제</a>
+        <div class="box">
+            <a href="#">
+                <h2>펫보험 다이렉트</h2>
+                <p>월 3만원 이상 가입 시</p>
+            </a>
+        </div>
+        <p>N포인트 최대 3만원<span>(2회차 납입 시)</span></p>
+    </div>
 </body>
 </html>
