--- a/html_level1/me/main.html
+++ b/html_level1/me/main.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>내 소개</title>
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css">   
+    <link href="./styles/reset.css" rel="stylesheet">
     <link href="./styles/main.css" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +16,7 @@
         <a href="./index.html" class="photo"><img src="./images/photo.png" alt="처음화면으로"></a>
         <h1>web Designer +<br><span>FrontEnd Developer</span></h1>
         <h2>최진규</h2>
-        <a href="https://github.com/Kimsatgod333" target="_blank" class="git">https://github.com/Kimsatgod333</a>
+        <a href="https://github.com/Kimsatgod333" target="_blank" class="git" title="git Hub 바로가기">https://github.com/Kimsatgod333</a>
         <h2>가능스킬</h2>
         <ul class="skill">
             <li>photoshop</li>
