--- a/html_level1/me/index.html
+++ b/html_level1/me/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <title>intro</title>
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <link href="./styles/index.css" rel="stylesheet">
     <link href="./styles/reset.css" rel="stylesheet">
 </head>
