폼태그 오타 및 오류 수정

--- a/html_basic/form.html
+++ b/html_basic/form.html
@@ -68,26 +68,26 @@
                 <dt>CSS 문제. 우선순위가 클래스보다 높은것을 선택하세요.</dt>
                 <dd>아래 항목 중 정답에 해당하는 2개 이상을 선택하세요<div class=""></div></dd>
                 <dd>
-                    <lable>
+                    <label>
                         <span>tag</span>
                         <input type="checkbox" name="question" value="tag">
-                    </lable>
-                    <lable>
+                    </label>
+                    <label>
                         <span>class</span>
                         <input type="checkbox" name="question" value="class">
-                    </lable>
-                    <lable>
+                    </label>
+                    <label>
                         <span>id</span>
                         <input type="checkbox" name="question" value="id">
-                    </lable>
-                    <lable>
+                    </label>
+                    <label>
                         <span>inline</span>
                         <input type="checkbox" name="question" value="inline">
-                    </lable>
-                    <lable>
+                    </label>
+                    <label>
                         <span>style</span>
                         <input type="checkbox" name="question" value="style">
-                    </lable>
+                    </label>
                 </dd>
             </dl>
         </fieldset>
