--- a/html_basic/form.html
+++ b/html_basic/form.html
@@ -20,7 +20,7 @@
             <span>리뷰작성</span>
             <textarea name="user_review" rows="5" cols="80" placeholder="10글자 이상 작성시 포인트 지급"></textarea><br>
             <span>받는사람 :</span>
-            <input type="text" multiple name="receiving"><br>
+            <input type="text" name="receiving" multiple><br>
             <span>사진 첨부</span>
             <input type="file" accept="image/*" name="user_photo"><br>
             <span>아이디 :</span>
