--- a/html_level1/w3schools/main.html
+++ b/html_level1/w3schools/main.html
@@ -16,12 +16,12 @@
         <p>welcome back! please enter your details.</p>
         <form action="#" method="post" id="account">
             <h2>Email</h2>
-            <p><input type="email" name="user_email" placeholder="Enter your email or id"></p>
+            <p class="user_in"><input type="email" name="user_email" placeholder="Enter your email or id"></p>
             <h2>Password</h2>
-            <p><input type="password" name="user_password" placeholder="Enter your password"></p>
+            <p class="user_in"><input type="password" name="user_password" placeholder="Enter your password"></p>
             <h2>Forgot Password</h2>
-            <p><button type="button" id="login_btn">Login</button></p>
-            <p><a href="#" class="login_google">Sign in Google</a></p>
+            <p class="user_button"><button type="button" id="login_btn">Login</button></p>
+            <p class="user_button"><a href="#" class="login_google">Sign in Google</a></p>
         </form>
         <p>Don't have on account?<a href="#">Sign up for free</a></p>
     </div>
