--- a/html_level2/animation/2-1-math/동아출판.html
+++ b/html_level2/animation/2-1-math/동아출판.html
@@ -35,17 +35,36 @@
         /* 
         1(주황선) 2(책) 3(문어) 4(벌) 5(꽃병) 6(별1) 7(별2)
         */
-        main #deco .obj1 {z-index:9; right:0;}
-        main #deco .obj2 {z-index:10; top:-100px; left:-50px;}
-        main #deco .obj3 {z-index:9; right:190px; top:0;}
-        main #deco .obj4 {z-index:11; right:0; bottom:0;}
-        main #deco .obj5 {z-index:11; right:150px; bottom:0;}
+        main #deco .obj1 {z-index:9; right:0; animation:rotate 2s linear infinite alternate;}
+        main #deco .obj2 {z-index:10; top:-100px; left:-50px; animation:book 0.5s both;}
+        main #deco .obj3 {z-index:9; right:190px; top:0; animation:octo 0.5s 0.3s both;}
+        main #deco .obj4 {z-index:11; right:0; bottom:0; animation:bee 0.5s both;}
+        main #deco .obj5 {z-index:11; right:150px; bottom:0; animation:rotate 2s linear infinite alternate-reverse;}
         main #deco .obj6 {z-index:12; left:-50px; bottom:100px;}
         main #deco .obj7 {z-index:12; right:50px; top:-30px;}
-        
+        main #deco .obj6,
+        main #deco .obj7 {animation:scale 1s linear infinite alternate;}
         /* 애니메이션 */
-        
-
+        @keyframes book { /* 책 */
+            from {transform:translateX(100px);}
+            to {transform:translateX(0);}
+        }
+        @keyframes octo { /* 문어 */
+            from {transform:translateY(0);}
+            to {transform:translateY(-130px);}
+        }
+        @keyframes bee { /* 꿀벌 */
+            from {transform:translate(0,0) rotate(0);}
+            to {transform:translate(-350px, 100px) rotate(60deg);}
+        }
+        @keyframes rotate { /* 주황선, 꽃병 */
+            from {transform:rotate(0);}
+            to {transform:rotate(10deg);}
+        }
+        @keyframes scale { /* 별 */
+            from {transform:scale(1);}
+            to {transform:scale(1.2);}
+        }
     </style>
 </head>
 <body>
