--- a/html_level2/animation/2-1-math/룩앤플레이.html
+++ b/html_level2/animation/2-1-math/룩앤플레이.html
@@ -25,30 +25,39 @@
 
         main #visual #deco .obj1 {
             top:170px; left:50%; margin-left:-342px;
+            animation:rotate 2s linear infinite alternate;
         }
         main #visual #deco .obj2 {
             left:0; top:150px;
+            animation:scale 1s linear infinite alternate;
         }
         main #visual #deco .obj3 {
+            animation:rotate 2s linear infinite alternate;
             left:100px; top:250px;
         }
         main #visual #deco .obj4 {
             left:150px; top:350px;
+            animation:scale 1s linear infinite alternate;
         }
         main #visual #deco .obj5 {
             right:0; top:150px;
+            animation:rotate 2s linear infinite alternate-reverse;
         }
         main #visual #deco .obj6 {
             right:200px; top:250px;
+            animation:rotate 2s linear infinite alternate;
         }
         main #visual #deco .obj7 {
             right:200px; top:240px;
+            animation:scale 1s linear infinite alternate;
         }
         main #visual #deco .obj8 {
             left:270px; top:440px;
+            animation:rotate 2s linear infinite alternate-reverse;
         }
         main #visual #deco .obj9 {
             right:0; top:440px;
+            animation:scale 1s linear infinite alternate;
         }
 
         main #book_center {
@@ -67,9 +76,25 @@
             text-align:center; background:#f1f1f1; color:#222;
         }
         main .category a.active {background:#26bad7; color:#fff;}
-
+        /* 애니메이션 호출 그룹 */ /* 값을 하나하나에 다쓰지 않고 같은 애니메이션을 사용하는 태그를 묶어 애니메이션을 호출할수 있다.*/
+        /* main #visual #deco .obj1,
+        main #visual #deco .obj3,
+        main #visual #deco .obj6 {animation:rotate 2s linear infinite alternate-reverse;} */ 
+        /* main #visual #deco .obj5,
+        main #visual #deco .obj8 {animation:rotate 2s linear infinite alternate-reverse;} */
+        /* main #visual #deco .obj2,
+        main #visual #deco .obj4,
+        main #visual #deco .obj7,
+        main #visual #deco .obj9 {animation:scale 1s linear infinite alternate;} */
         /* 애니메이션 */
-
+        @keyframes scale {
+            from {transform:scale(1);}
+            to {transform:scale(1.2);}
+        }
+        @keyframes rotate {
+            from {transform:rotate(0);}
+            to {transform:rotate(20deg);}
+        }
     </style>
 </head>
 <body>
