--- a/html_level2/animation/2-1-math/유니드.html
+++ b/html_level2/animation/2-1-math/유니드.html
@@ -61,16 +61,36 @@
             display:flex; justify-content: space-between; align-items:center;
         }
         main .center h1 {color:#fff; display:flex; flex-flow:column nowrap; justify-content: space-between;}
-        main .center h1 span {font-size:3.5rem; letter-spacing:-2.5px; padding:10px 0;}
+        main .center h1 span {color:#fff; font-size:3.5rem; letter-spacing:-2.5px; padding:10px 0;
+            opacity:0; /* 초기값 */
+            animation:top_txt 0.5s both;
+        }
+        main .center h1 span:nth-child(1) {}
+        main .center h1 span:nth-child(2) {animation-delay:0.5s;}
         main .center .right {
             position:relative; right:174px; top:-100px;
+            opacity:0; 
+            animation:circle 1s 0.3s both;
         }
         main .center .right span {
-            position:absolute; width:174px; height:174px;
+            position:absolute; width:174px; height:174px; 
         }
         main .center .right span:nth-child(1) {}
+        main .center .right span:nth-child(1) img {animation:rotate 30s linear alternate infinite;}
         main .center .right span:nth-child(2) {text-align:center; line-height:174px;}
         /* animation */
+        @keyframes top_txt {
+            from {transform:translateY(0);}
+            to {transform:translateY(-50px);opacity:1;}
+        }
+        @keyframes circle {
+            from {transform:translateX(50px);}
+            to {transform:translateX(0);opacity:1;}
+        }
+        @keyframes rotate {
+            from {transform:rotate(0);}
+            to {transform:rotate(360deg);}
+        }
     </style>
 </head>
 <body>
