--- a/html_level2/animation/2-3-star/index.html
+++ b/html_level2/animation/2-3-star/index.html
@@ -32,14 +32,15 @@
         #menu_title img {padding:0 10px;}
         /* 메뉴내용 */
         .menu_contents {position:relative;}
-        .menu_contents .menu {
+        .menu_contents .menu { 
             display:flex; justify-content:space-between;
             position:absolute; left:0; top:0;
+            /* 공통 CSS에 숨김 처리했을경우 개별에 숨김처리할 필요X (현재는 개별 CSS에 숨김처리)*/
         }
         .menu_contents .menu a {
             margin-right:10px; overflow:hidden; position:relative;
             border-radius:10px;
-            transition:all 0.3s;
+            transition:border-radius 0.3s;
         }
         .menu_contents .menu a:hover {
             border-radius:50%;
@@ -48,13 +49,15 @@
         .menu_contents .menu a img {width:100%;}
         /* 커피정보 */
         .menu_contents .menu a .info {
-            display:none;
-        }
-        .menu_contents .menu a:hover .info {
             background-color:rgba(0,102,51,0.8); /*#006633 == rgb(0,102,051)*/
             width:100%; height:100%; display:block;
             position:absolute; left:0; top:0;
             text-align:center;
+            opacity:0;
+            transition:all 0.3s;
+        }
+        .menu_contents .menu a:hover .info {
+            opacity:1;
         }
         .menu_contents .menu a .info span:first-child {padding-top:40%;}
         .menu_contents .menu a .info span {
@@ -69,7 +72,7 @@
         .menu_contents .menu1 a .info {}
         .menu_contents .menu1 a .info span {}
         .menu_contents .menu2 {
-            display:none;
+            display:none; /* 공통 CSS에 숨김 처리했을경우 개별에 숨김처리할 필요X */
         }
         .menu_contents .menu2 a {}
         .menu_contents .menu2 a img {}
