--- a/html_level2/animation/3-2-lg/ver2.html
+++ b/html_level2/animation/3-2-lg/ver2.html
@@ -31,7 +31,7 @@
         }
         main .video_bg video {
             position:absolute;
-            left:-100px; top:-200px; z-index:10;
+            left:-300px; top:-200px; z-index:10;
         }
         main .video_bg img {
             position:absolute; 
@@ -42,6 +42,11 @@
             background:url(images/bg_flow.png) repeat-x left top;
             height:150px; width:100%;
             position:absolute; z-index:30;
+            animation: text_animation 15s linear infinite;
+        }
+        @keyframes text_animation {
+            from {background-position-x:0;}
+            to {background-position-x:3244px;}
         }
     </style>
 </head>
@@ -53,7 +58,7 @@
     <main>
         <div class="center">
             <div class="video_bg">
-                <video src="video/golden.mp4" autoplay muted loop></video>
+                <video src="./video/city.mp4" autoplay muted loop></video>
                 <img src="images/img_intro.png" alt="">
             </div>
             <div class="txt_bg_ani"></div>
