--- a/html_level2/animation/2-2-bmw/index.html
+++ b/html_level2/animation/2-2-bmw/index.html
@@ -29,7 +29,10 @@
             transform:scaleX(0);
             transition:all 0.4s;
         }
-        header nav:hover a::after {transform:scaleX(1);}
+        header nav a:hover + a::after {
+            width:100%;
+            transform:scaleX(1);
+        }
         main {position:relative; width:1400px; height:80vh; margin:0 auto;}
         main img {
             position:absolute; left:0; bottom:100px;
