BMW 애니메이션 및 250515과제

--- a/html_level2/animation/1-5-sola/solasido.html
+++ b/html_level2/animation/1-5-sola/solasido.html
@@ -34,7 +34,14 @@
         /* class */
 
         /* animation */
-
+        @keyframes title {
+            from {transform:translateY(0); opacity:0;}
+            to {transform:translateY(-20px); opacity:1;}
+        }
+        @keyframes background {
+            from {}
+            to {}
+        }
     </style>
     <script>
         window.onload=function(){
