--- a/html_level2/animation/2-2-bmw/index.html
+++ b/html_level2/animation/2-2-bmw/index.html
@@ -9,7 +9,7 @@
     <style>
         #wrap {
             width:100%; /* height:100vh; */
-            background:url(images/bmw_bg.jpg) no-repeat 50% 100% / cover;
+            background:url(images/bmw_bg.jpg) no-repeat 50% 45% / cover;
             position:relative;
         }
         header {
@@ -26,11 +26,11 @@
             content:''; display:block;
             width:100%; height:1px; background:#cae4ff;
             position:absolute; bottom:-1px;
-            transform:scaleX(0);
-            transition:all 0.4s;
+            transform-origin:right;
+            transform:scaleX(0); /* 길어지는 애니메이션 연장개념으로 display가아닌(none으로 하면 transition이 안됨) scale 0으로 설정 */
+            transition:transform 0.4s;
         }
-        header nav a:hover + a::after {
-            width:100%;
+        header nav a:hover::after { /* after는 0으로 설정하였기 때문에 부모인 a에 마우스를 올렸을때 after를 제어하는 상대선택자를 만들어야 한다. */
             transform:scaleX(1);
         }
         main {position:relative; width:1400px; height:80vh; margin:0 auto;}
