--- a/html_level2/animation/1-5-sola/solasido.html
+++ b/html_level2/animation/1-5-sola/solasido.html
@@ -23,13 +23,17 @@
             background-position:center;
             opacity:0; transition:opacity 0.5s;
         }
-        .slide_wrap .slide_c .slide1 {background-image:url(images/bg1.jpg); opacity:1}
+        .slide_wrap .slide_c .slide1 {
+            animation:bg 2s linear both;
+            background-image:url(images/bg1.jpg); opacity:1;
+        }
         .slide_wrap .slide_c .slide2 {background-image:url(images/bg2.jpg);}
         .slide_wrap .slide_c .slide3 {background-image:url(images/bg3.jpg);}
         .slide_wrap .slide_c .slide p {
             text-align:center; color:#fff;
             font-size:3rem; letter-spacing:-1px;
             position:relative; top:400px;
+            animation:title 1s 0.5s both;
         }
         /* class */
 
@@ -38,9 +42,9 @@
             from {transform:translateY(0); opacity:0;}
             to {transform:translateY(-20px); opacity:1;}
         }
-        @keyframes background {
-            from {}
-            to {}
+        @keyframes bg {
+            from {transform:scale(1);}
+            to {transform:scale(1.2);}
         }
     </style>
     <script>
