--- a/html_level2/animation/1-5-sola/solasido.html
+++ b/html_level2/animation/1-5-sola/solasido.html
@@ -24,7 +24,7 @@
             opacity:0; transition:opacity 0.5s;
         }
         .slide_wrap .slide_c .slide1 {
-            animation:bg 2s linear both;
+            animation:bg 5s both;
             background-image:url(images/bg1.jpg); opacity:1;
         }
         .slide_wrap .slide_c .slide2 {background-image:url(images/bg2.jpg);}
@@ -33,18 +33,18 @@
             text-align:center; color:#fff;
             font-size:3rem; letter-spacing:-1px;
             position:relative; top:400px;
-            animation:title 1s 0.5s both;
+            animation:title 2.5s 0.5s both;
         }
         /* class */
 
         /* animation */
         @keyframes title {
-            from {transform:translateY(0); opacity:0;}
-            to {transform:translateY(-20px); opacity:1;}
+            from {transform:translateY(0) scale(1); opacity:0;}
+            to {transform:translateY(-40px) scale(1.3); opacity:1;}
         }
         @keyframes bg {
-            from {transform:scale(1);}
-            to {transform:scale(1.2);}
+            from {background-size:100%;}
+            to {background-size:120%;}
         }
     </style>
     <script>
